--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.css
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.css
@@ -71,7 +71,7 @@ body{
 
     border-radius: 6px;
     background-color: whitesmoke;
-    box-shadow: 2px 3px 6px 2px rgb(155, 155, 155);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .eventos{
@@ -85,7 +85,7 @@ body{
 }
 
 .eventos button{
-    height: 15%;
+    height: 18%;
     width: 85%;
 
     border: none;
@@ -96,13 +96,15 @@ body{
     cursor: pointer;
     outline: none;
 
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .eventos button:hover{
-    transition: 0.2s;
+    transition: 0.3s;
     background-color: #ffc222;
+    color: white;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .logoff{
@@ -110,18 +112,23 @@ body{
     width: 95%;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
-.logoff button{
+.btn-logoff{
     height: 65%;
     width: 85%;
 
     border: none;
+    color: black;
     background-color: white;
     border-radius: 6px;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
     cursor: pointer;
     outline: none;
 
@@ -131,9 +138,10 @@ body{
     color: white;
 }
 
-.logoff button:hover{
-    transition: 0.2s;
+.btn-logoff:hover{
+    transition: 0.3s;
     background-color: #c4231d;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 footer{
