--- a/Sistema/Interface/Public/css/agendar.css
+++ b/Sistema/Interface/Public/css/agendar.css
@@ -159,37 +159,22 @@ footer{
     width: 100%;
 
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     flex-direction: row;
 }
 
 .detalhes{
-    height: 85%;
-    width: 85%;
-    margin-left: 2%;
+    height: 100%;
+    width: 100%;
+    margin: 1%;
 
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
 
-    font-size: 1.4em;
-    border-right: 2px solid white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.detalhes2{
-    height: 85%;
-    width: 95%;
-    padding-left: 1%;
-
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex-direction: column;
-
-    font-size: 1.4em;
+    font-size: 1.3em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -207,7 +192,7 @@ footer{
     height: 100%;
     width: 50%;
     margin-right: 5%;
-    border-radius: 50%;
+    border-radius: 14px;
 
     display: flex;
     align-items: center;
@@ -245,4 +230,27 @@ footer{
     color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3em;
+}
+
+.expecificacao{
+    height: 10%;
+    width: 100%;
+    margin: 1%;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+}
+
+.label, .conteudo{
+    height: 100%;
+    width: auto;
+    margin-left: 1%;
+    
+    align-items: center;
+    display: flex;
+
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.1em;
 }
