--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.css
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.css
@@ -126,21 +126,28 @@ h1{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.container-eventos button{
+.container-eventos a{
     height: 20%;
     width: 80%;
 
     border-radius: 6px;
     border: 2px solid #ffc222;
+    background-color: white;
+
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    display: flex;
     outline: none;
     cursor: pointer;
 
-    background-color: white;
+    color: black;
     font-size: 1.3em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.container-eventos button:hover{
+.container-eventos a:hover{
     transition: 0.3s;
     background-color: #ffc222;
     color: white;
