--- a/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.css
+++ b/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.css
@@ -228,6 +228,7 @@ footer{
     width: 20%;
 
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
 
