--- a/Sistema/Interface/Pages/PagesUsuario/ConsultarAgendamentos/consultaragendamentos.css
+++ b/Sistema/Interface/Pages/PagesUsuario/ConsultarAgendamentos/consultaragendamentos.css
@@ -201,14 +201,15 @@ footer{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.registros{
+.table tbody{
     min-height: 80%;
     width: 100%;
+
     display: flex;
     flex-direction: column;
 }
 
-.registros tr{
+.registros{
     min-height: 20%;
     width: 100%;
 
@@ -221,7 +222,7 @@ footer{
     background-color: white;
 }
 
-.registros tr td{
+.registros td{
     height: 95%;
     width: 20%;
 
