--- a/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.css
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.css
@@ -281,7 +281,7 @@ footer{
     width: 15%;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
 }
 
@@ -295,4 +295,25 @@ footer{
     justify-content: flex-start;
 
     font-size: 1.5em;
+}
+
+.lista-estrelas{
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+
+    list-style: none;
+    margin: 0%;
+    padding: 0%;
+}
+
+.lista-estrelas li{
+    width: 20%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
