--- a/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.css
+++ b/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.css
@@ -263,3 +263,15 @@ footer{
     transition: 0.3s;
     transform: scale(0.98);
 }
+
+.lista-notas{
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
+
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
