--- a/Sistema/Interface/Pages/PagesUsuario/AvaliacoesUsuarios/outrasavaliacoes.css
+++ b/Sistema/Interface/Pages/PagesUsuario/AvaliacoesUsuarios/outrasavaliacoes.css
@@ -237,3 +237,21 @@ footer{
     align-items: center;
     justify-content: center;
 }
+
+.bloco-estrelas{
+    height: auto;
+    width: 15%;
+    display: flex;
+}
+
+.estrelas{
+    height: auto;
+    width: auto;
+    margin: 0%;
+    padding: 0%;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    list-style-type: none;
+}
