--- a/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.css
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.css
@@ -222,12 +222,17 @@ footer{
 
 .inpnascimento{
     height: 40%;
-    width: 97.1%;
+    width: 97%;
     padding-left: 2%;
 
     outline: none;
+    cursor: text;
+
+    font-size: 1.1em;
+    color: rgb(102, 102, 102);
+    border: 2px solid silver;
+    background-color: whitesmoke;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.2em;
 }
 
 .bloco-contacriada, .bloco-ultimologin, .bloco-ultimaalteracao{
@@ -468,7 +473,7 @@ footer{
 
 .nota{
     height: 100%;
-    width: 13%;
+    width: 20%;
 
     display: flex;
     align-items: center;
@@ -476,6 +481,20 @@ footer{
 
     font-size: 1.1em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.estrelas{
+    height: 100%;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    list-style-type: none;
+    font-size: 1.2em;
 }
 
 .data-pub{
