--- a/Sistema/Interface/Pages/PagesUsuario/EditarConta/editconta.css
+++ b/Sistema/Interface/Pages/PagesUsuario/EditarConta/editconta.css
@@ -106,11 +106,16 @@ footer{
 }
 
 .selecao{
-    height: 70%;
-    width: 30%;
+    height: 90%;
+    width: 100%;
+    padding-right: 1%;
+    padding-left: 1%;
 
+    display: flex;
     outline: none;
+
     font-size: 1em;
+    color: rgb(102, 102, 102);
     border: 2px solid silver;
     background-color: whitesmoke;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
