--- a/Sistema/Interface/Public/css/criarconta.css
+++ b/Sistema/Interface/Public/css/criarconta.css
@@ -1,4 +1,5 @@
 body{
+    min-height: 100vh;
     height: 100vh;
     margin: 0%;
     padding: 0%;
@@ -39,6 +40,7 @@ footer{
 
 .container-guia{
     height: 90%;
+    min-height: 90%;
     width: 30%;
 
     text-align: center;
@@ -54,7 +56,8 @@ footer{
 
 .bloco-form{
     height: 95%;
-    width: 50%;
+    min-height: 95%;
+    min-width: 50%;
 
     display: flex;
     align-items: center;
@@ -112,9 +115,10 @@ footer{
     height: 50%;
     width: 95%;
 
-    font-size: 1.2em;
     cursor: pointer;
+    font-size: 1.2em;
     border-radius: 6px;
+    text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
     border: none;
@@ -156,7 +160,8 @@ footer{
 .data-usuario{
     height: 25%;
     width: 90%;
-    padding-left: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
 
     outline: none;
     border: 2px solid #32CD32;
@@ -166,6 +171,10 @@ footer{
 .btn-criar:hover{
     transition: 0.2s;
     background-color: #228B22;
+}
+
+.btn-criar:active{
+    transform: scale(0.98);
 }
 
 .desenvolvedor, .incorporacao{
