--- a/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.css
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.css
@@ -1,7 +1,9 @@
 body{
     height: 105vh;
-    margin: 0%;
-    padding: 0%;
+    min-height: 105vh;
+    margin: 0px;
+    padding: 0px;
+    overflow-y: auto;
 }
 
 .container-master{
@@ -504,6 +506,17 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+
+    font-size: 1.1em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.senha-acesso{
+    height: 5vh;
+    width: 90%;
+    padding-left: 4px;
+
+    outline: none;
 
     font-size: 1.1em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
