--- a/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.css
+++ b/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.css
@@ -162,7 +162,13 @@ footer{
     border: 2px solid #006494;
     border-radius: 8px;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: black;
     font-size: 1.5em;
+    text-decoration: none;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -253,7 +259,7 @@ footer{
 
 .btn-modelos{
     height: 20%;
-    width: 65%;
+    width: 60%;
     margin: 1%;
     
     text-align: center;
@@ -261,8 +267,13 @@ footer{
     cursor: pointer;
     outline: none;
     
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     color: white;
     font-size: 1.4em;
+    text-decoration: none;
     border: 2px solid white;
     background-color: transparent;
 }
@@ -329,8 +340,14 @@ footer{
     border: 2px solid white;
     background-color: transparent;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: white;
     font-size: 1.5em;
     text-align: center;
+    text-decoration: none;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
